--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ h3 a:hover {
 
 .section {
 	width: 100vw;
-	height: 100vh;
+	height: 100vh!important;
 	position: relative;
 	overflow: hidden;
 }
